# macro-py

./: .gitignore  CLAUDE.md  MODEL_VIEW_IMPLEMENTATION.md  README.md  pyproject.toml  test_model_view_performance.py  uv.toml
src/macro_py/: MacroApp.py  MacroGUI.py  MacroGUI_pyqt5_backup.py  MacroGUI_tkinter.py  MacroPlayer.py  MacroRecorder.py  __init__.py  __main__.py
